--- a/css/formWhiteStyle.css
+++ b/css/formWhiteStyle.css
@@ -95,23 +95,29 @@ body {
 .box-upload-review-event div.star-rating {
   width: 22px !important;
 }
+/* line 100, ../sass/formWhiteStyle.scss */
+.box-upload-review-event .errorMessage {
+  font-size: 14px !important;
+  color: #ed1c24 !important;
+  text-align: right !important;
+}
 
-/* line 106, ../sass/formWhiteStyle.scss */
+/* line 111, ../sass/formWhiteStyle.scss */
 .formWhite .select2-container {
   margin-bottom: 10px !important;
   border: 1px solid #ccc;
 }
-/* line 111, ../sass/formWhiteStyle.scss */
+/* line 116, ../sass/formWhiteStyle.scss */
 .formWhite .select2-container-multi .select2-choices {
   font-size: 14px;
   border: 0px !important;
   margin-left: 0px !important;
 }
-/* line 115, ../sass/formWhiteStyle.scss */
+/* line 120, ../sass/formWhiteStyle.scss */
 .formWhite .select2-container-multi .select2-choices:focus {
   border-bottom: 0px solid #d8d8d8 !important;
 }
-/* line 120, ../sass/formWhiteStyle.scss */
+/* line 125, ../sass/formWhiteStyle.scss */
 .formWhite .select2-search-choice {
   background: #ff7505 !important;
   color: #fff !important;
@@ -121,35 +127,35 @@ body {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
-/* line 130, ../sass/formWhiteStyle.scss */
+/* line 135, ../sass/formWhiteStyle.scss */
 .formWhite .select2-container .select2-choice {
   border: none !important;
   background-image: none !important;
   color: #787878 !important;
   background-color: initial !important;
 }
-/* line 138, ../sass/formWhiteStyle.scss */
+/* line 143, ../sass/formWhiteStyle.scss */
 .formWhite .select2-arrow {
   display: none !important;
 }
-/* line 142, ../sass/formWhiteStyle.scss */
+/* line 147, ../sass/formWhiteStyle.scss */
 .formWhite input[type="text"][disabled] {
   background: #fff;
   color: #787878;
   font-size: 16px;
 }
 
-/* line 149, ../sass/formWhiteStyle.scss */
+/* line 154, ../sass/formWhiteStyle.scss */
 .select2-no-results {
   display: none !important;
 }
 
-/* line 153, ../sass/formWhiteStyle.scss */
+/* line 158, ../sass/formWhiteStyle.scss */
 .select2-drop-active {
   border: 1px solid #ccc !important;
 }
 
-/* line 157, ../sass/formWhiteStyle.scss */
+/* line 162, ../sass/formWhiteStyle.scss */
 .select2-highlighted {
   background: #ff7505 !important;
 }
