--- a/sass/formBlackStyle.scss
+++ b/sass/formBlackStyle.scss
@@ -34,7 +34,7 @@
   	font-size: 14px;
   	color: $grey-light;
   	text-align:left !important; 
-  	padding-bottom:20px !important; 
+  //	padding-bottom:20px !important; 
   	.error{
   		background: none !important;
 	  	color: $red !important;
@@ -57,7 +57,7 @@
 }
 
 .formBlack .error input{
-	margin-bottom: 14px !important;	
+	//margin-bottom: 14px !important;	
 }
 
 .formBlack .buttonOrange{
@@ -95,13 +95,18 @@
   background-color: $grey-superdark;
 }
 
-
+.formBlack .errorMessage{
+	font-size: 14px !important;
+	color: $red !important;
+	text-align: right !important;
+} 
 .formBlack .upload-box{
 	height: 103px;
 	border: $grey 1px solid;
 	margin: 0px !important;
 	cursor: pointer;
 	margin-bottom: 20px !important;
+	margin-top: 20px !important;
 	.thumbnail-box{
 		text-align:center !important;
 		  background-color: $grey-dark !important;
