--- a/sass/formBlackStyle.scss
+++ b/sass/formBlackStyle.scss
@@ -208,6 +208,11 @@
 	
 }
 
+.upload-box img{
+	max-width: none !important;
+	
+}
+
 
 //----------------------------- featuring --------------------------
 .formBlack{
